<resources>
    <string name="text_user_login">User Login</string>
    <string name="login_button">Log IN</string>
    <string name="sign_up_button">NOT A USER? | SIGN UP</string>
    <string name="welcome">Welcome, </string>
    <string name="logout_button">LOGOUT</string>
    <string name="sign_up_text">User Sign Up</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="enter_email_big">Enter Email</string>
    <string name="enter_password_big">Enter Password</string>
    <string name="sign_up_button_small">SIGN UP</string>
    <string name="login_button_merged">LOGIN</string>
    <string name="logout_status">Log Out Successful</string>
    <string name="email_required">Email is required</string>
    <string name="email_invalid">Email is not valid</string>
    <string name="short_password">Password must be more than 8 characters long</string>
    <string name="phone_required">Phone is required</string>
    <string name="creating_user">Creating User please wait...</string>
    <string name="app_name">FirebaseAuth</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="have_acc_link">Already have an account?</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="not_registered_link">Not registered yet? Sign Up!</string>
    <string name="successful_login">Welcome!</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_username">Please enter username</string>
    <string name="enter_valid_phone">Please enter valid phone number</string>
    <string name="password_limit">Minimum 8 characters</string>
    <string name="enter_password">Please enter password</string>
    <string name="login_error">Log In error</string>
    <string name="provide_credentials">Provide credentials</string>
    <string name="email_taken">This email is already taken</string>
    <string name="error">Error</string>
    <string name="invalid_password">Invalid password</string>
    <string name="panel_type">Panel type</string>
    <string name="power">Power</string>
    <string name="capacity">Capacity</string>
    <string name="usage_period">Usage period</string>
    <string name="address">Address</string>
    <string name="no_internet">No Internet connection</string>
    <string name="failure">Update failure</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab2">Tab #2</string>
    <string name="data_list">Data List</string>
    <string name="profile">Profile</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="update">Update</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="profile_picture">Profile picture</string>
    <string name="image_uploaded">Image uploaded!</string>
    <string name="username_updated">Username is updated!</string>
    <string name="email_updated">Email is updated!</string>
    <string name="add_panel">Add panel</string>
    <string name="add">Add</string>
    <string name="required">Required field</string>
    <string name="panel_type_print">Panel type:</string>
    <string name="power_print">Power:</string>
    <string name="capacity_print">Capacity:</string>
    <string name="address_print">Address:</string>
</resources>
