<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.shiva.try1.Register">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/sign_up_text"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_name"
        android:textColor="@color/colorBlack"
        android:ems="10"
        android:layout_below="@+id/text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/edit_name"
        android:gravity="center"/>

    <TextView
        android:id="@+id/validate_name"
        android:layout_width="382dp"
        android:layout_height="36dp"
        android:layout_below="@+id/text_view"
        android:layout_alignStart="@+id/validate_email"
        android:layout_alignLeft="@+id/validate_email"
        android:layout_alignEnd="@+id/validate_email"
        android:layout_alignRight="@+id/validate_email"
        android:layout_alignBottom="@+id/edit_password"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="175dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="@color/colorRed" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/enter_phone"
        android:textColor="@color/colorBlack"
        android:ems="10"
        android:layout_below="@+id/edit_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/edit_number"
        android:gravity="center"/>

    <TextView
        android:id="@+id/validate_phone"
        android:layout_width="382dp"
        android:layout_height="36dp"
        android:layout_below="@+id/text_view"
        android:layout_alignStart="@+id/validate_email"
        android:layout_alignLeft="@+id/validate_email"
        android:layout_alignEnd="@+id/validate_email"
        android:layout_alignRight="@+id/validate_email"
        android:layout_alignBottom="@+id/edit_password"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="106dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="@color/colorRed" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email_big"
        android:textColor="@color/colorBlack"
        android:ems="10"
        android:layout_below="@+id/edit_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/edit_email"
        android:gravity="center"/>

    <TextView
        android:id="@+id/validate_email"
        android:layout_width="382dp"
        android:layout_height="36dp"
        android:layout_below="@+id/text_view"
        android:layout_alignBottom="@+id/edit_password"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="@color/colorRed" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_password_big"
        android:textColor="@color/colorBlack"
        android:ems="10"
        android:layout_below="@+id/edit_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/edit_password"
        android:gravity="center"/>

    <TextView
        android:id="@+id/validate_password"
        android:layout_width="382dp"
        android:layout_height="36dp"
        android:layout_below="@+id/text_view"
        android:layout_alignStart="@+id/validate_email"
        android:layout_alignLeft="@+id/validate_email"
        android:layout_alignEnd="@+id/validate_email"
        android:layout_alignRight="@+id/validate_email"
        android:layout_alignBottom="@+id/edit_password"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="-26dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="@color/colorRed" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_button_small" />

    <TextView
        android:id="@+id/button_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_register"
        android:layout_marginTop="20dp"
        android:text="@string/login_button_merged"
        android:clickable="true"
        android:gravity="center"/>

</RelativeLayout>